--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "quillgethtml",
   "version": "0.0.1",
   "scripts": {
-    "build": "uglifyjs --compress --mangle -- quillgethtml.js > quillgethtml.min.js"
+    "build": "uglifyjs --compress --mangle -- quillgethtml.js > quillgethtml.min.js",
+    "release":"release-it --no-npm.publish"
   },
   "devDependencies": {
+    "release-it": "^12.3.0",
     "uglify-js": "^3.6.0"
   }
 }
