Added in support for releasing builds with npm

--- a/.release-it.json
+++ b/.release-it.json
@@ -8,6 +8,9 @@
 		"assets":["quillgethtml.js","quillgethtml.min.js"],
 		"preRelease":true
 	},
+	"npm": {
+		"release": true
+	},
 	"hooks": {
 		"before:init":["npm run build"]
 	}
